routes: split out stripe processing bits for now, as we are in free public alpha

--- a/spacewiki_io/templates/index.html
+++ b/spacewiki_io/templates/index.html
@@ -37,35 +37,10 @@
   <div class="row pricing">
     <div class="large-12 columns">
       <h2>Pricing</h2>
-    </div>
-  </div>
-  <div class="row pricing">
-    <div class="large-4 columns">
-      <h3>Non-profits and Communities</h3>
-      <ul>
-        <li>Unlimited users</li>
-        <li>Unlimited pages</li>
-        <li>20MB attachments</li>
-        <li class="the-price">Free</li>
-      </ul>
-    </div>
-    <div class="large-4 columns">
-      <h3>Startup</h3>
-      <ul>
-        <li>1-25 Users</li>
-        <li>Unlimited pages</li>
-        <li>50GB attachments</li>
-        <li class="the-price">$20 per month</li>
-      </ul>
-    </div>
-    <div class="large-4 columns">
-      <h3>Corporate</h3>
-      <ul>
-        <li>Unlimited Users</li>
-        <li>Unlimited pages</li>
-        <li>500GB attachments</li>
-        <li class="the-price">$50 per month</li>
-      </ul>
+      <p>SpaceWiki is currently <em>Free</em> while in early public alpha. In
+      the future, we plan to provide SpaceWiki.io free of charge to non-profits
+      and small slack communities, with plans available to startups starting at
+      $20 per month.
     </div>
   </div>
 {% endblock %}
