--- a/spacewiki_io/templates/signup.html
+++ b/spacewiki_io/templates/signup.html
@@ -34,8 +34,8 @@
         <li>Unlimited pages</li>
         <li>20MB attachments</li>
         <li class="the-price">
-          <a class="free-button" href="{{url_for('routes.choose_plan', plan='free')}}">Free!</a>
-          <a class="donate-button" href="{{url_for('routes.choose_plan', plan='donate')}}">Or donate $5</a>
+          <a class="free-button" href="{{url_for('signup.choose_plan', plan='free')}}">Free!</a>
+          <a class="donate-button" href="{{url_for('signup.choose_plan', plan='donate')}}">Or donate $5</a>
         </li>
       </ul>
     </div>
@@ -46,7 +46,7 @@
         <li>Unlimited pages</li>
         <li>50GB attachments</li>
         <li class="the-price">
-          <a class="paid-button" href="{{url_for('routes.choose_plan', plan='startup')}}">$20 per month</a>
+          <a class="paid-button" href="{{url_for('signup.choose_plan', plan='startup')}}">$20 per month</a>
         </li>
       </ul>
     </div>
@@ -57,7 +57,7 @@
         <li>Unlimited pages</li>
         <li>500GB attachments</li>
         <li class="the-price">
-          <a class="paid-button" href="{{url_for('routes.choose_plan', plan='corporate')}}">$50 per month</a>
+          <a class="paid-button" href="{{url_for('signup.choose_plan', plan='corporate')}}">$50 per month</a>
         </li>
       </ul>
     </div>
