--- a/spacewiki_io/templates/_add.html
+++ b/spacewiki_io/templates/_add.html
@@ -1,5 +1,5 @@
 <a
-  href="https://slack.com/oauth/authorize?scope=team:read&client_id={{settings.SLACK_KEY}}&redirect_uri={{url_for('routes.add_to_slack',
+  href="https://slack.com/oauth/authorize?scope=team:read&client_id={{dispatcher_settings.SLACK_KEY}}&redirect_uri={{url_for('routes.add_to_slack',
   _external=True) | urlencode}}">
   <img alt="Add to Slack" height="40" width="139"
                                       src="https://platform.slack-edge.com/img/add_to_slack.png"
