--- a/spacewiki_io/templates/_signin.html
+++ b/spacewiki_io/templates/_signin.html
@@ -1,5 +1,5 @@
 <a
-  href="https://slack.com/oauth/authorize?scope=identity.basic&client_id={{settings.SLACK_KEY}}&redirect_uri={{url_for('signin.slack_login', _external=True) | urlencode}}"> <img alt="Sign in with Slack" height="40"
+  href="https://slack.com/oauth/authorize?scope=identity.basic&client_id={{dispatcher_settings.SLACK_KEY}}&redirect_uri={{url_for('signin.slack_login', _external=True) | urlencode}}"> <img alt="Sign in with Slack" height="40"
   width="172" src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
               srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png
               1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png
