signin: redirect to the page requested when signing in

--- a/spacewiki_io/templates/finished.html
+++ b/spacewiki_io/templates/finished.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="small-12 columns">
       <h2>You're good to go!</h2>
-      <p>Your wiki is setup and good to go. You can visit it at <a
+      <p>Your wiki is setup and good to go. You can visit it and login at <a
          href="https://{{space.domain}}.spacewiki.io/">{{space.domain}}.spacewiki.io/</a>
     </div>
   </div>
